[gd_scene load_steps=3 format=3 uid="uid://df37oviw8ith1"]

[ext_resource type="Script" path="res://Scripts/Model/PressButton.gd" id="1_ntm73"]

[sub_resource type="BoxShape3D" id="BoxShape3D_27mwg"]
size = Vector3(0.2, 0.05, 0.06)

[node name="PressButton" type="Node3D"]
script = ExtResource("1_ntm73")

[node name="PressArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PressArea"]
shape = SubResource("BoxShape3D_27mwg")

[node name="SoundDown" type="FmodEventEmitter3D" parent="."]
event_guid = "{00000000-0436-0000-0e00-000049000000}"

[node name="SoundUp" type="FmodEventEmitter3D" parent="."]
event_guid = "{00000000-0436-0000-0e00-000049000000}"
